	PR tree-optimization/77901 	* tree-ssa-reassoc.c (optimize_range_tests_var_bound): Only optimize 	if ranges[i].exp is SSA_NAME when looking for >= and only when 	ranges[i].exp is NULL or SSA_NAME when looking for the other 	comparison.

* gcc.c-torture/compile/pr77901.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@240899 138bc75d-0d04-0410-961f-82ee72b054a4