gcc/testsuite/gcc.c-torture/compile/pr77901.c
@@ -1,0 +1,10 @@
+/* PR tree-optimization/77901 */
+
+void bar (void);
+
+void
+foo (int *x, long *y)
+{
+  if (*y && *x != 10 && *x != 12 && *y >= 0)
+    bar ();
+}
